--- a/company.html
+++ b/company.html
@@ -30,7 +30,7 @@
                 <div id="menu">
                     <nav>
                         <ul>
-                            <li><a href="greet.html" class="menuText">組合について</a></li>
+                            <li><a href="greet.html" class="menuText">連合会について</a></li>
                             <li> <a href="company.html" class="menuText">指定業者申込</a> </li>
                             <li> <a href="general.html" class="menuText">入会案内</a> </li>
                             <li> <a href="qa.html" class="menuText">よくある質問</a></li>
@@ -43,7 +43,7 @@
                 <div class="headerList">
                     <nav>
                         <ul>
-                            <li><a href="greet.html">組合について</a></li>
+                            <li><a href="greet.html">連合会について</a></li>
                             <li> <a href="company.html">指定業者申込</a> </li>
                             <li> <a href="general.html">入会案内</a> </li>
                             <li> <a href="qa.html">よくある質問</a></li>
