--- a/greet.html
+++ b/greet.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>組合について</title>
+    <title>連合会について</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
                 <div id="menu" > <!-- 横並び -->
                     <nav>
                         <ul>
-                            <li><a href="greet.html" class="menuText">組合について</a></li>
+                            <li><a href="greet.html" class="menuText">連合会について</a></li>
                             <li> <a href="company.html" class="menuText">指定業者申込</a> </li>
                             <li> <a href="general.html" class="menuText">入会案内</a> </li>
                             <li> <a href="qa.html" class="menuText">よくある質問</a></li>
@@ -44,7 +44,7 @@
                 <div class="headerList">
                     <nav>
                         <ul>
-                            <li><a href="greet.html">組合について</a></li>
+                            <li><a href="greet.html">連合会について</a></li>
                             <li> <a href="company.html">指定業者申込</a> </li>
                             <li> <a href="general.html">入会案内</a> </li>
                             <li> <a href="qa.html">よくある質問</a></li>
@@ -61,7 +61,7 @@
         <div class="greMidasi">
         </div>
         <div class="greMidasiP">
-            <h2>組合について</h2>
+            <h2>連合会について</h2>
             <h3>About the federation</h3>
         </div>
 
