--- a/general.html
+++ b/general.html
@@ -90,7 +90,7 @@
                     <div id="menu"> <!-- 横並び -->
                         <nav>
                             <ul>
-                                <li><a href="greet.html" class="menuText">組合について</a></li>
+                                <li><a href="greet.html" class="menuText">連合会について</a></li>
                                 <li> <a href="company.html" class="menuText">指定業者申込</a> </li>
                                 <li> <a href="general.html" class="menuText">入会案内</a> </li>
                                 <li> <a href="qa.html" class="menuText">よくある質問</a></li>
@@ -106,7 +106,7 @@
                     <div class="headerList">
                         <nav>
                             <ul>
-                                <li><a href="greet.html">組合について</a></li>
+                                <li><a href="greet.html">連合会について</a></li>
                                 <li> <a href="company.html">指定業者申込</a> </li>
                                 <li> <a href="general.html">入会案内</a> </li>
                                 <li> <a href="qa.html">よくある質問</a></li>
