--- a/qa.html
+++ b/qa.html
@@ -108,7 +108,7 @@
                         <div class="descriptionImage">
                             <img src="images/btn2.jpg" alt="button">
                         </div>
-                        <p>当組合について</p>
+                        <p>当連合会について</p>
                     </a>
                 </div>
                 <div class="item">
