--- a/company.html
+++ b/company.html
@@ -70,7 +70,7 @@
             <div class="company_wrapper wrapper">
                 <div class="gonannai">
                     <h3><span class="shiteigyousya">指定業者入会</span>のご案内</h3>
-                    <p>兵庫県柔道整復師協同組合では指定業者を募集しています。<br><br>約500名の組合員が加入しており、経営のサポート、開院や事業のお手伝いなど幅広く行っております。<br><br>ぜひ御社も指定業者への参入をご検討ください。
+                    <p>兵庫県柔道整復師連合会では指定業者を募集しています。<br><br>約500名の組合員が加入しており、経営のサポート、開院や事業のお手伝いなど幅広く行っております。<br><br>ぜひ御社も指定業者への参入をご検討ください。
                     </p>
                 </div>
 
