--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                             </div>
 
                             <div class="topSalutationWrap">
-                                <h2>近畿柔道整復師協同組合のご挨拶</h2>
+                                <h2>近畿柔道整復師連合会のご挨拶</h2>
                                 <p>
-                                    近畿柔道整復師協同組合連合会のホームページにお越し頂きまして誠にありがとうございます。<br><br>
+                                    近畿柔道整復師連合会のホームページにお越し頂きまして誠にありがとうございます。<br><br>
                                     この連合会は兵庫県。京都府。滋賀県。和歌山県。奈良県。の1府4県の協同組合の共同体で
                                     各県の会員が日常使う医療機器、消耗品、各種保険関係の団体保険、医療事故保険等福利厚生の充実、学術大会の協賛など情報交換を共有して組合員に多種多様な商品を安価で販売しております。<br><br>
                                     広告募集は1年間通して行っています。<br><br>一般の企業から個人商店さん迄そしてネット販売している方も広告の応募も可能です。<br><br>是非ご活用の程宜しくお願申し上げます。
